# idleDetector

./: .gitignore  Makefile  README.md  pyproject.toml
src/idleDetector/log/: root_logger.py
src/idleDetector/models/: machine.py  time_handler.py
src/idleDetector/utils/: common.py  exceptions.py  os_modules.py
src/idle_detector/: __init__.py  __main__.py  idleDetector.py  idle_detector.py  idle_notifier.py
src/idle_detector/agent/: __init__.py  generate.py  install.py
src/idle_detector/cli/: __init__.py  cli_parser.py  functions.py
src/idle_detector/log/: __init__.py  root_logger.py
src/idle_detector/models/: __init__.py  _dataclasses.py  machine.py  stage_manager.py  terminal_notifier.py  time_handler.py
src/idle_detector/utils/: __init__.py  common.py  exceptions.py  metadata.py  os_modules.py
